# ChangeLog for net-libs/webkit-gtk
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.136 2012/01/14 17:49:39 maekke Exp $

  14 Jan 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.1-r301.ebuild:
  x86 stable, bug #393007

  14 Jan 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.1-r201.ebuild:
  x86 stable, bug #393007

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> webkit-gtk-1.6.1-r201.ebuild,
  webkit-gtk-1.6.1-r301.ebuild:
  amd64 stable, bug 393007

  26 Dec 2011; Justin Lecher <jlec@gentoo.org> webkit-gtk-1.6.1-r201.ebuild,
  webkit-gtk-1.6.1-r301.ebuild:
  Respect CC, otherwise fails on prefix #395875

  29 Nov 2011; Fabian Groffen <grobian@gentoo.org>
  +files/webkit-gtk-1.6.1-darwin-quartz.patch, webkit-gtk-1.6.1-r300.ebuild,
  webkit-gtk-1.6.1-r301.ebuild, webkit-gtk-1.6.1-r201.ebuild,
  files/webkit-gtk-1.2.5-darwin-quartz.patch:
  Fix darwin-quartz patch, drop darwin8 patch from ebuild, bug #392385

*webkit-gtk-1.6.1-r301 (29 Nov 2011)
*webkit-gtk-1.6.1-r201 (29 Nov 2011)

  29 Nov 2011; Pacho Ramos <pacho@gentoo.org>
  +files/webkit-gtk-1.6.1-double-conversion.patch,
  +files/webkit-gtk-1.6.1-pkgconfig-fix.patch, +webkit-gtk-1.6.1-r201.ebuild,
  +webkit-gtk-1.6.1-r301.ebuild:
  Apply upstream patches to fix pkgconfig file and arches that use 64-bit double
  type, use gnome2_environment_reset, drop DEPRECATED flags (they were passed
  with USE debug), skip flacky tests after reporting failures to upstream.

  05 Nov 2011; Pacho Ramos <pacho@gentoo.org> -webkit-gtk-1.2.7.ebuild,
  -webkit-gtk-1.4.2-r200.ebuild, -webkit-gtk-1.4.2-r300.ebuild,
  webkit-gtk-1.4.3-r200.ebuild, webkit-gtk-1.4.3-r300.ebuild:
  Drop old and stop trying to apply a patch that will be unable to be applied
  (even if patch exists, bug #389481).

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> webkit-gtk-1.4.3-r300.ebuild:
  alpha/ia64/sparc stable wrt #385699
