@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.136 2012/01/14 17:49:39 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.138 2012/01/18 21:06:58 maekke Exp $
+
+  18 Jan 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.1-r301.ebuild:
+  arm stable, bug #393007
+
+  18 Jan 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.1-r201.ebuild:
+  arm stable, bug #393007
 
   14 Jan 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.1-r301.ebuild:
   x86 stable, bug #393007
